--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label for = "author"> </label>
         <input type = "text" id="author" class = "user-input" onfocus="this.value=''" placeholder ="Author">
         <label for = "pages"></label>
-        <input type = "text" id="pages" class = "user-input" onfocus="this.value=''" placeholder ="Pages">
+        <input type = "number" id="pages" class = "user-input" onfocus="this.value=''" placeholder ="Pages">
         <button input type = "submit" id = "submit" name ="text"> Add book </button>
     
     <div id="read">
